add carga_datasets function

--- a/Database/carga_datasets.ipynb
+++ b/Database/carga_datasets.ipynb
@@ -1,11 +1,58 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import pandas as pd\n",
+    "from sqlalchemy import create_engine\n",
+    "\n",
+    "# Conexión a PostgreSQL (reemplaza estos valores con los detalles de tu base de datos)\n",
+    "postgresql_engine = create_engine('postgresql://postgres:root@localhost:5432/proyecto1')\n",
+    "\n",
+    "# Ruta al archivo CSV\n",
+    "csv_file_path = 'C:\\\\Users\\\\camilo\\\\proyecto1\\\\train.csv'\n",
+    "\n",
+    "# Leer el archivo CSV con el delimitador adecuado (punto y coma)\n",
+    "try:\n",
+    "    df = pd.read_csv(csv_file_path, delimiter=';', on_bad_lines='skip')\n",
+    "    print(\"Archivo CSV leído exitosamente.\")\n",
+    "except Exception as e:\n",
+    "    print(f\"Error al leer el archivo CSV: {e}\")\n",
+    "    df = None\n",
+    "\n",
+    "# Verificar que el DataFrame se haya leído correctamente\n",
+    "if df is not None:\n",
+    "    # Reemplazar comas por puntos en valores numéricos\n",
+    "    for col in df.select_dtypes(include=['object']).columns:\n",
+    "        df[col] = df[col].str.replace(',', '.', regex=False)\n",
+    "\n",
+    "    # Ajustar los nombres de las columnas para que coincidan con los nombres en minúsculas de la tabla PostgreSQL\n",
+    "    df.columns = [\n",
+    "        'month', 'day_of_week', 'dep_del15', 'dep_time_blk', 'distance_group', 'segment_number',\n",
+    "        'concurrent_flights', 'number_of_seats', 'carrier_name', 'airport_flights_month',\n",
+    "        'airline_flights_month', 'airline_airport_flights_month', 'avg_monthly_pass_airport',\n",
+    "        'avg_monthly_pass_airline', 'flt_attendants_per_pass', 'ground_serv_per_pass', 'plane_age',\n",
+    "        'departing_airport', 'latitude', 'longitude', 'previous_airport', 'prcp', 'snow', 'snwd',\n",
+    "        'tmax', 'awnd', 'carrier_historical', 'dep_airport_hist', 'day_historical', 'dep_block_hist'\n",
+    "    ]\n",
+    "\n",
+    "    try:\n",
+    "        # Insertar datos en la tabla de PostgreSQL\n",
+    "        df.to_sql('flights', con=postgresql_engine, if_exists='append', index=False)\n",
+    "        print(\"Datos insertados en la base de datos exitosamente.\")\n",
+    "    except Exception as e:\n",
+    "        print(f\"Error al insertar datos: {e}\")\n",
+    "else:\n",
+    "    print(\"No se pudo leer el archivo CSV, no se insertarán datos.\")"
+   ]
   }
  ],
  "metadata": {
