Añadir archivo grande con Git LFS

--- a/Database/tablas_datasets.ipynb
+++ b/Database/tablas_datasets.ipynb
@@ -3,17 +3,77 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "# Creacion Tablas Datasets "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "En este Jupyter notebook vamos a crear las tablas en la Data Base PostgeSQL, para los 2 Datasets que usaremos: el original y el transformado  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Agregamos la ruta a la raíz del proyecto al sys.path para facilitar importaciones "
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "import os\n",
+    "\n",
+    "notebook_dir = os.getcwd()\n",
+    "root_dir = os.path.abspath(os.path.join(notebook_dir, '..'))\n",
+    "sys.path.append(root_dir)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Importamos la libreria y la conexion "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "import psycopg2\n",
-    "from Conexion_BD import create_connection\n",
-    "\n",
+    "from Database.conexion_BD import create_connection"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Creamos la tabla para el Dataset Original "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Conexión exitosa a la base de datos PostgreSQL.\n",
+      "Tabla 'flights' creada exitosamente.\n"
+     ]
+    }
+   ],
+   "source": [
     "def create_table():\n",
     "    \"\"\"Crea la tabla en la base de datos PostgreSQL usando la conexión dada.\"\"\"\n",
     "    connection = create_connection()\n",
@@ -82,7 +142,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.12.4"
   }
  },
