--- a/Database/tablas_datasets.ipynb
+++ b/Database/tablas_datasets.ipynb
@@ -18,12 +18,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Agregamos la ruta a la raíz del proyecto al sys.path para facilitar importaciones "
+    "#### Agregamos la ruta a la raíz del proyecto al sys.path para facilitar importaciones "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,12 +39,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Importamos la libreria y la conexion "
+    "#### Importamos la libreria y la conexion "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,12 +56,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Creamos la tabla para el Dataset Original "
+    "#### Creamos la tabla para el Dataset Original "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -151,7 +151,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
