--- a/EDA/flights_EDA.ipynb
+++ b/EDA/flights_EDA.ipynb
@@ -30,7 +30,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Directorio de trabajo actual después del cambio: c:\\Users\\mirlo\\proyecto1\n"
+      "Directorio de trabajo actual después del cambio: c:\\Users\\camilo\\proyecto_1\\Proyecto_1\n"
      ]
     }
    ],
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -102,14 +102,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\mirlo\\AppData\\Local\\Temp\\ipykernel_15964\\3754038683.py:4: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
+      "C:\\Users\\camilo\\AppData\\Local\\Temp\\ipykernel_36032\\3754038683.py:4: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
       "  flights = pd.read_sql(query, con=connection)\n"
      ]
     },
@@ -322,7 +322,7 @@
        "[5 rows x 30 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -367,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -392,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -609,7 +609,7 @@
        "dep_block_hist                     float64             228"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -691,7 +691,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -884,7 +884,7 @@
        "dep_block_hist                 0"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -905,7 +905,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -932,7 +932,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -943,19 +943,46 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Buscamos datos atipicos "
+    "Comprobamos"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Valores Duplicados:\n",
+      "Número de filas duplicadas: 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"\\nValores Duplicados:\")\n",
+    "print(f\"Número de filas duplicadas: {flights.duplicated().sum()}\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Para las columnas del dia de la semana y mes traemos el valor minimo y maximo de esas columnas para verificar que no hayan datos incoherentes "
+    "##### Buscamos datos atípicos "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Para las columnas del dia de la semana, mes y la que indica si un vuelo fue retrasado o no, traemos el valor minimo y maximo de para verificar que no hayan datos incoherentes "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -993,21 +1020,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Los datos son coherentes devido a que son 12 meses representados con numeros, y los 7 dias de la semana tambien representados con numeros "
+    "Los datos son coherentes debido a que son 12 meses representados con números, y los 7 días de la semana también representados con números "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Verificamos si  hay datos negativos para estas columnas: distance_group segment_number, concurrent_flights, number_of_seats, flt_attendants_per_pass,   ground_serv_per_pass\n",
-    "\n",
-    "y en caso de que si, eliminarlos debido a que su precencia en estas seria ilogica "
+    "Verificamos si  hay datos negativos para estas columnas: distance_group segment_number, concurrent_flights, number_of_seats, flt_attendants_per_pass,   ground_serv_per_pass y en caso de que si, eliminarlos debido a que su presencia en estas seria ilógica  "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1048,7 +1073,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1084,12 +1109,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Mostramos los valores unicos y la cantidad de veces que salen de la columna carrier_name "
+    "Mostramos los valores únicos y la cantidad de veces que salen de la columna carrier_name "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1127,19 +1152,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Tenemos que hay 16 aereolinias diferentes y nos muestra el número de vuelos asociados a cada aerolínea en el conjunto de datos."
+    "Tenemos que hay 16 aerolíneas diferentes y nos muestra el número de vuelos asociados a cada aerolínea en el conjunto de datos."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Miramos la cantidad de valores unicos de las columnas departing_airport, y previus_airport"
+    "Miramos la cantidad de valores unicos de las columnas departing_airport, y previus_airport."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1183,7 +1208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1217,7 +1242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1233,7 +1258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1267,7 +1292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1283,7 +1308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1314,7 +1339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1332,7 +1357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1363,7 +1388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1394,7 +1419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1411,7 +1436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1437,13 +1462,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Revisamos las columnas  prcp, snow, snwd, tmax, awnd\n",
-    "\n"
+    "Revisamos las columnas  prcp, snow, snwd, tmax, awnd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1490,7 +1514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1504,12 +1528,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Revisamos las columnas para verificar la convercion "
+    "Revisamos las columnas para verificar la conversión "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1535,22 +1559,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Análisis Univariado:"
+    "#### Análisis Bivariado:"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "#### Análisis Bivariado:"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -1618,7 +1633,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
