--- a/Database/carga_datasets.ipynb
+++ b/Database/carga_datasets.ipynb
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,7 +139,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Lo insertamos en la tabla (Devido a la cantidad de datos es normal que se demore un poco al ejecutar el codigo)"
+    "#### Lo insertamos en la tabla (Debido a la cantidad de datos es normal que se demore un poco al ejecutar el codigo)"
    ]
   },
   {
@@ -159,6 +159,54 @@
     "if train is not None and not train.empty:\n",
     "    try:\n",
     "        train.to_sql('flights', con=postgresql_engine, if_exists='append', index=False)\n",
+    "        print(\"Datos insertados en la base de datos exitosamente.\")\n",
+    "    except Exception as e:\n",
+    "        print(f\"Error al insertar datos: {e}\")\n",
+    "else:\n",
+    "    print(\"El DataFrame está vacío, no se insertarán datos.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Cragamos el Dataset Transformado "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ruta_dataset_original = 'csv/flights_limpio.csv'\n",
+    "train_limpio = pd.read_csv(ruta_dataset_original, delimiter=',', on_bad_lines='skip')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Lo insertamos en la tabla (Debido a la cantidad de datos es normal que se demore un poco al ejecutar el codigo)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Datos insertados en la base de datos exitosamente.\n"
+     ]
+    }
+   ],
+   "source": [
+    "if train_limpio is not None and not train_limpio.empty:\n",
+    "    try:\n",
+    "        train_limpio.to_sql('flights_limpio', con=postgresql_engine, if_exists='append', index=False)\n",
     "        print(\"Datos insertados en la base de datos exitosamente.\")\n",
     "    except Exception as e:\n",
     "        print(f\"Error al insertar datos: {e}\")\n",
