--- a/EDA/flights_EDA.ipynb
+++ b/EDA/flights_EDA.ipynb
@@ -635,37 +635,38 @@
    "metadata": {},
    "source": [
     "1. Información Temporal:\n",
-    "- **MONTH:** Mes del año.\n",
-    "- **DAY_OF_WEEK:** Día de la semana.\n",
-    "- **DEP_BLOCK_HIST:** Bloque de salida.\n",
-    "2. Variables de Destino (Target):\n",
-    "- **DEP_DEL15:** Indicador binario de un retraso de salida de más de 15 minutos (1 es sí).\n",
-    "3. Características del Vuelo:\n",
-    "- **DISTANCE_GROUP:** Grupo de distancia que volará la aeronave.\n",
-    "- **SEGMENT_NUMBER:** Número de segmento en el que se encuentra la aeronave para el día.\n",
-    "- **CONCURRENT_FLIGHTS:** Número de vuelos simultáneos que salen del aeropuerto en el mismo bloque de salida.\n",
-    "- **NUMBER_OF_SEATS:** Número de asientos en la aeronave.\n",
-    "- **PLANE_AGE:** Antigüedad de la aeronave que sale.\n",
-    "4. Características del Transportista y Aeropuerto:\n",
-    "- **CARRIER_NAME:** Nombre del transportista.\n",
-    "- **AIRPORT_FLIGHTS_MONTH:** Promedio de vuelos del aeropuerto por mes.\n",
-    "- **AIRLINE_FLIGHTS_MONTH:** Promedio de vuelos de la aerolínea por mes.\n",
-    "- **AIRLINE_AIRPORT_FLIGHTS_MONTH:** Promedio de vuelos por mes para la aerolínea y el aeropuerto.\n",
-    "- **AVG_MONTHLY_PASS_AIRPORT:** Promedio de pasajeros para el aeropuerto de salida para el mes.\n",
-    "- **AVG_MONTHLY_PASS_AIRLINE:** Promedio de pasajeros por aerolínea para el mes.\n",
-    "- **FLT_ATTENDANTS_PER_PASS:** Auxiliares de vuelo por pasajero de la aerolínea.\n",
-    "- **GROUND_SERV_PER_PASS:** Empleados de servicio en tierra (mostrador de servicio) por pasajero de la aerolínea.\n",
-    "5. Información Geográfica:\n",
-    "- **DEPARTING_AIRPORT:** Aeropuerto de salida.\n",
-    "- **LATITUDE:** Latitud del aeropuerto de salida.\n",
-    "- **LONGITUDE:** Longitud del aeropuerto de salida.\n",
-    "- **PREVIOUS_AIRPORT:** Aeropuerto anterior del que salió la aeronave.\n",
-    "6. Condiciones Meteorológicas:\n",
-    "- **PRCP:** Pulgadas de precipitación del día.\n",
-    "- **SNOW:** Pulgadas de nevadas del día.\n",
-    "- **SNWD:** Pulgadas de nieve en tierra del día.\n",
-    "- **TMAX:** Temperatura máxima del día.\n",
-    "- **AWND:** Velocidad máxima del viento del día"
+    "\n",
+    "- **month:** Mes del año.\n",
+    "- **day_of_week:** Día de la semana.\n",
+    "- **dep_block_hist:** Bloque de salida.\n",
+    "2. **Variables de Destino (Target):**\n",
+    "- **dep_del15:** Indicador binario de un retraso de salida de más de 15 minutos (1 es sí).\n",
+    "3. **Características del Vuelo:**\n",
+    "- **distance group:** Grupo de distancia que volará la aeronave.\n",
+    "- **segment_number:** Número de segmento en el que se encuentra la aeronave para el día.\n",
+    "- **concurrent_flights:** Número de vuelos simultáneos que salen del aeropuerto en el mismo bloque de salida.\n",
+    "- **number_of_Sseats:** Número de asientos en la aeronave.\n",
+    "- **plane_age:** Antigüedad de la aeronave que sale.\n",
+    "4. **Características del Transportista y Aeropuerto:**\n",
+    "- **carrier_name:** Nombre del transportista.\n",
+    "- **airport_fligths_month:** Promedio de vuelos del aeropuerto por mes.\n",
+    "- **airline_fligths_month:** Promedio de vuelos de la aerolínea por mes.\n",
+    "- **airline_airport_fligths_month:** Promedio de vuelos por mes para la aerolínea y el aeropuerto.\n",
+    "- **avg_monthly_pass_airport:** Promedio de pasajeros para el aeropuerto de salida para el mes.\n",
+    "- **avg_monthly_pass_airline:** Promedio de pasajeros por aerolínea para el mes.\n",
+    "- **flt_attendants_per_pass**: Auxiliares de vuelo por pasajero de la aerolínea.\n",
+    "- **ground_serv_per_pass**: Empleados de servicio en tierra (mostrador de servicio) por pasajero de la aerolínea.\n",
+    "5. **Información Geográfica:**\n",
+    "- **departing_airport:** Aeropuerto de salida.\n",
+    "- **latitude:** Latitud del aeropuerto de salida.\n",
+    "- **longitude:** Longitud del aeropuerto de salida.\n",
+    "- **previous_airport:** Aeropuerto anterior del que salió la aeronave.\n",
+    "6. **Condiciones Meteorológicas:**\n",
+    "- **prcp:** Pulgadas de precipitación del día.\n",
+    "- **snow:** Pulgadas de nevadas del día.\n",
+    "- **snwd:** Pulgadas de nieve en tierra del día.\n",
+    "- **tmax:** Temperatura máxima del día.\n",
+    "- **awnd:** Velocidad máxima del viento del día"
    ]
   },
   {
@@ -1661,7 +1662,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Podemos ver que el mes de agosto y el dia viernes son los que presentan una mayor salida de vuelos   "
+    "Estos gráficos muestran la distribución de vuelos a lo largo de los días de la semana y los meses.\n",
+    "Los días con mayor tráfico aéreo pueden indicar picos en la demanda de vuelos. Esto es útil para optimizar el personal y otros recursos logísticos en aeropuertos. Los días con menos vuelos podrían aprovecharse para el mantenimiento y otras actividades que requieren menor interferencia."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Podemos ver que el mes de agosto y el dia viernes son los que presentan una mayor salida de vuelos "
    ]
   },
   {
@@ -1762,6 +1771,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Este gráfico muestra la distribución de los vuelos a lo largo del día, agrupados por intervalos de tiempo que son los bloques por hora, y \n",
+    "se puede identificar las horas pico en las que se programan más vuelos, lo cual es crucial para la planificación de recursos en los aeropuertos y para las aerolíneas. Los períodos con menor actividad también pueden indicar oportunidades para optimizar operaciones o manejar la demanda de manera más eficiente."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Vemos que el rango de horas en donde sale un mayor numero de vuelos es entre las 08:00 horas hasta las 08:59 horas "
    ]
   },
@@ -1795,12 +1812,12 @@
    "source": [
     "delay_rate_by_block = flights.groupby('dep_time_blk')['dep_del15'].mean()\n",
     "\n",
-    "plt.figure(figsize=(14, 8))  # Ampliar el tamaño del gráfico\n",
+    "plt.figure(figsize=(14, 8))  \n",
     "sns.barplot(x=delay_rate_by_block.index, y=delay_rate_by_block.values, palette='magma')\n",
     "plt.title('Tasa de Retrasos por Bloque de Salida')\n",
     "plt.xlabel('Bloque de Salida')\n",
     "plt.ylabel('Tasa de Retrasos (Proporción)')\n",
-    "plt.xticks(rotation=45)  # Rotar las etiquetas del eje X para mejor legibilidad\n",
+    "plt.xticks(rotation=45) \n",
     "plt.show()"
    ]
   },
@@ -1808,7 +1825,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "la mayor proporcion de retrasos que hay es en el rango de las 19:00 y 19:59 con una tasa de aproximadamente el 25%"
+    "la mayor proporcion de retrasos que hay es en el rango entre las 19:00 y 19:59 horas con una tasa de aproximadamente el 25%"
    ]
   },
   {
@@ -1867,11 +1884,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Identificación de Picos Operacionales: Las visualizaciones permiten identificar horas del día y días de la semana con mayor actividad, lo que es crucial para la optimización de recursos.\n",
+    "\n",
+    "Impacto del Clima en los Retrasos: Existe una correlación evidente entre condiciones climáticas adversas y retrasos, lo cual puede guiar la planificación preventiva.\n",
+    "\n",
+    "Optimización de Rutas y Eficiencia: Analizar la duración de los vuelos y la relación con los retrasos podría ayudar a optimizar rutas, mejorando la eficiencia y reduciendo costos operativos."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1881,11 +1902,117 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Finalmente vamos a exportar nuestro Dataframe ya limpio y con las comunas que vamos a usar, para luego realizar las vizualizaciones de datos, sin embargo primero vamos a eliminar otras columnas que no vamos a usar "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Eliminamos las columnas \n",
+    "\n",
+    "- latitude y longitude: Porque ya tenemos el nombre del aeropuerto (departing_airport), por lo que no vamos a necesitar las coordenadas geográficas(latitude, longitude) para el análisis. La ubicación geográfica se puede representar de manera más clara a través del nombre del aeropuerto.\n",
+    "- previous_airport: como no planeamos hacer análisis de vuelos consecutivos o cadenas de vuelos, esta columna podría no es crucial en el dataset.\n",
+    "- snwd (Snow Depth):porque ya tenemos columnas relacionadas con nieve (snow) y precipitación (prcp), la profundidad de la nieve (snwd) es redundante. "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "flights = flights.drop(columns=['latitude', 'longitude', 'previous_airport', 'snwd'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Comprobamos "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['month', 'day_of_week', 'dep_del15', 'dep_time_blk', 'distance_group',\n",
+       "       'segment_number', 'concurrent_flights', 'number_of_seats',\n",
+       "       'carrier_name', 'airport_flights_month', 'airline_flights_month',\n",
+       "       'airline_airport_flights_month', 'avg_monthly_pass_airport',\n",
+       "       'avg_monthly_pass_airline', 'plane_age', 'departing_airport', 'prcp',\n",
+       "       'snow', 'tmax', 'awnd'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 94,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "flights.columns"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Exportamos el dataset limpio "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Archivo exportado a: Proyecto_1/csv/flights_limpio.csv\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "\n",
+    "file_path = 'Proyecto_1/csv/flights_limpio.csv'\n",
+    "\n",
+    "if not os.path.exists(file_path):\n",
+    "    flights.to_csv(file_path, index=False)\n",
+    "    print(f\"Archivo exportado a: {file_path}\")\n",
+    "else:\n",
+    "    print(f\"El archivo ya existe en la ruta: {file_path}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "En el notebook llamado tablas_datasets creamos la tabla en la Base de Datos, y en el notebook carga_datasets lo insertamos en esta tabla "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "En el notebook llamado fligths_transformado_EDA donde le realisamos un E.D.A y un analisis a este dataset "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Con este dataset haremos las vizualisaciones de datos en PowerBI "
+   ]
   }
  ],
  "metadata": {
