--- a/Database/tablas_datasets.ipynb
+++ b/Database/tablas_datasets.ipynb
@@ -133,6 +133,70 @@
     "if __name__ == \"__main__\":\n",
     "    create_table()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Creamos la tabla para el Dataset Transformado "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def create_table():\n",
+    "    \"\"\"Crea la tabla 'flights_limpio' en la base de datos PostgreSQL usando la conexión dada.\"\"\"\n",
+    "    connection = create_connection()\n",
+    "    \n",
+    "    if connection is not None:\n",
+    "        try:\n",
+    "            cursor = connection.cursor()\n",
+    "            \n",
+    "            create_table_query = \"\"\"\n",
+    "            CREATE TABLE IF NOT EXISTS flights_limpio (\n",
+    "                id SERIAL PRIMARY KEY,\n",
+    "                month INT,\n",
+    "                day_of_week INT,\n",
+    "                dep_del15 INT,\n",
+    "                dep_time_blk VARCHAR(100),\n",
+    "                distance_group INT,\n",
+    "                segment_number INT,\n",
+    "                concurrent_flights INT,\n",
+    "                number_of_seats INT,\n",
+    "                carrier_name VARCHAR(250),\n",
+    "                airport_flights_month INT,\n",
+    "                airline_flights_month INT,\n",
+    "                airline_airport_flights_month INT,\n",
+    "                avg_monthly_pass_airport FLOAT,\n",
+    "                avg_monthly_pass_airline FLOAT,\n",
+    "                plane_age FLOAT,\n",
+    "                departing_airport VARCHAR(250),\n",
+    "                prcp FLOAT,\n",
+    "                snow FLOAT,\n",
+    "                tmax FLOAT,\n",
+    "                awnd FLOAT\n",
+    "            );\n",
+    "            \"\"\"\n",
+    "            \n",
+    "            cursor.execute(create_table_query)\n",
+    "            connection.commit()\n",
+    "            print(\"Tabla 'flights' creada exitosamente.\")\n",
+    "        \n",
+    "        except (Exception, psycopg2.Error) as error:\n",
+    "            print(f\"Error al crear la tabla: {error}\")\n",
+    "        \n",
+    "        finally:\n",
+    "            if cursor:\n",
+    "                cursor.close()\n",
+    "            if connection:\n",
+    "                connection.close()\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    create_table()"
+   ]
   }
  ],
  "metadata": {
