--- a/Database/tablas_datasets.ipynb
+++ b/Database/tablas_datasets.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,9 +143,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Conexión exitosa a la base de datos PostgreSQL.\n",
+      "Tabla 'flights_limpio' creada exitosamente.\n"
+     ]
+    }
+   ],
    "source": [
     "def create_table():\n",
     "    \"\"\"Crea la tabla 'flights_limpio' en la base de datos PostgreSQL usando la conexión dada.\"\"\"\n",
@@ -158,8 +167,8 @@
     "            create_table_query = \"\"\"\n",
     "            CREATE TABLE IF NOT EXISTS flights_limpio (\n",
     "                id SERIAL PRIMARY KEY,\n",
-    "                month INT,\n",
-    "                day_of_week INT,\n",
+    "                month VARCHAR(50),\n",
+    "                day_of_week VARCHAR(50),\n",
     "                dep_del15 INT,\n",
     "                dep_time_blk VARCHAR(100),\n",
     "                distance_group INT,\n",
@@ -183,7 +192,7 @@
     "            \n",
     "            cursor.execute(create_table_query)\n",
     "            connection.commit()\n",
-    "            print(\"Tabla 'flights' creada exitosamente.\")\n",
+    "            print(\"Tabla 'flights_limpio' creada exitosamente.\")\n",
     "        \n",
     "        except (Exception, psycopg2.Error) as error:\n",
     "            print(f\"Error al crear la tabla: {error}\")\n",
