tablas_dataset cambio

--- a/EDA/flights_transformado_EDA.ipynb
+++ b/EDA/flights_transformado_EDA.ipynb
@@ -12,10 +12,10 @@
    "metadata": {},
    "source": [
     "Resumen de las Columnas Seleccionadas\n",
-    "month:\n",
     "\n",
-    "Descripción: Mes del año en que se realizó el vuelo.\n",
-    "Uso: Para analizar patrones temporales de retrasos a lo largo del año.\n",
+    "\n",
+    "- month: Descripción: Mes del año en que se realizó el vuelo. Uso: Para analizar patrones temporales de retrasos a lo largo del año.\n",
+    "\n",
     "day_of_week:\n",
     "\n",
     "Descripción: Día de la semana en que se realizó el vuelo.\n",
@@ -89,95 +89,6 @@
     "Descripción: Temperatura máxima del día.\n",
     "Uso: Para analizar si la temperatura influye en la probabilidad de retrasos.\n",
     "awnd: Descripción: Velocidad máxima del viento del día. Uso: Para evaluar el impacto del viento en los retrasos.\n",
-    "Conclusión\n",
-    "Estas columnas te proporcionarán una base sólida para responder a tus preguntas clave en el dashboard y para realizar un análisis exhaustivo de los factores que contribuyen a los retrasos de vuelos."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Resumen de las Columnas Seleccionadas\n",
-    "month:\n",
-    "\n",
-    "Descripción: Mes del año en que se realizó el vuelo.\n",
-    "Uso: Para analizar patrones temporales de retrasos a lo largo del año.\n",
-    "day_of_week:\n",
-    "\n",
-    "Descripción: Día de la semana en que se realizó el vuelo.\n",
-    "Uso: Para identificar días de la semana con mayor o menor probabilidad de retrasos.\n",
-    "dep_time_blk:\n",
-    "\n",
-    "Descripción: Bloque de tiempo en el que el vuelo estaba programado para salir.\n",
-    "Uso: Para analizar el impacto del horario en la probabilidad de retrasos.\n",
-    "dep_del15:\n",
-    "\n",
-    "Descripción: Indicador binario de si el vuelo tuvo un retraso de más de 15 minutos.\n",
-    "Uso: Es la variable objetivo para analizar los factores que contribuyen a los retrasos.\n",
-    "distance_group:\n",
-    "\n",
-    "Descripción: Grupo de distancia que volará la aeronave.\n",
-    "Uso: Para evaluar si la distancia del vuelo afecta la probabilidad de retrasos.\n",
-    "segment_number:\n",
-    "\n",
-    "Descripción: El segmento en el que se encuentra este número de cola para el día.\n",
-    "Uso: Para analizar cómo varía el retraso según el número de segmentos volados.\n",
-    "concurrent_flights:\n",
-    "\n",
-    "Descripción: Número de vuelos simultáneos que salen del aeropuerto en el mismo bloque de salida.\n",
-    "Uso: Para evaluar si la congestión del aeropuerto afecta la probabilidad de retrasos.\n",
-    "number_of_seats:\n",
-    "\n",
-    "Descripción: Número de asientos en la aeronave.\n",
-    "Uso: Para analizar si la capacidad del avión tiene relación con los retrasos.\n",
-    "carrier_name:\n",
-    "\n",
-    "Descripción: Nombre del transportista (aerolínea).\n",
-    "Uso: Para determinar qué aerolíneas son más o menos confiables en cuanto a puntualidad.\n",
-    "airport_flights_month:\n",
-    "\n",
-    "Descripción: Promedio de vuelos del aeropuerto por mes.\n",
-    "Uso: Para evaluar si la actividad mensual del aeropuerto está relacionada con los retrasos.\n",
-    "airline_flights_month:\n",
-    "\n",
-    "Descripción: Promedio de vuelos de la aerolínea por mes.\n",
-    "Uso: Para analizar si el volumen de operaciones de una aerolínea afecta su puntualidad.\n",
-    "airline_airport_flights_month:\n",
-    "\n",
-    "Descripción: Promedio de vuelos por mes para la aerolínea y el aeropuerto.\n",
-    "Uso: Para evaluar la relación entre la frecuencia de vuelos de una aerolínea en un aeropuerto específico y los retrasos.\n",
-    "avg_monthly_pass_airport:\n",
-    "\n",
-    "Descripción: Promedio de pasajeros para el aeropuerto de salida para el mes.\n",
-    "Uso: Para analizar si la cantidad de pasajeros influye en los retrasos.\n",
-    "avg_monthly_pass_airline:\n",
-    "\n",
-    "Descripción: Promedio de pasajeros por aerolínea para el mes.\n",
-    "Uso: Para evaluar el impacto del volumen de pasajeros de una aerolínea en la puntualidad.\n",
-    "plane_age:\n",
-    "\n",
-    "Descripción: Antigüedad de la aeronave que sale.\n",
-    "Uso: Para ver si la edad del avión tiene una correlación con los retrasos.\n",
-    "departing_airport:\n",
-    "\n",
-    "Descripción: Aeropuerto de salida.\n",
-    "Uso: Para determinar cuáles aeropuertos son más o menos propensos a tener vuelos con retrasos.\n",
-    "prcp:\n",
-    "\n",
-    "Descripción: Pulgadas de precipitación del día.\n",
-    "Uso: Para analizar el impacto de la lluvia en los retrasos.\n",
-    "snow:\n",
-    "\n",
-    "Descripción: Pulgadas de nevadas del día.\n",
-    "Uso: Para evaluar cómo las nevadas afectan la puntualidad de los vuelos.\n",
-    "tmax:\n",
-    "\n",
-    "Descripción: Temperatura máxima del día.\n",
-    "Uso: Para analizar si la temperatura influye en la probabilidad de retrasos.\n",
-    "awnd:\n",
-    "\n",
-    "Descripción: Velocidad máxima del viento del día.\n",
-    "Uso: Para evaluar el impacto del viento en los retrasos.\n",
     "Conclusión\n",
     "Estas columnas te proporcionarán una base sólida para responder a tus preguntas clave en el dashboard y para realizar un análisis exhaustivo de los factores que contribuyen a los retrasos de vuelos."
    ]
